# Snake-AI

./: AI.cpp  AI.h  Best Snake Final.txt  CMakeLists.txt  Evolution.cpp  Evolution.h  GreenCircle.cpp  GridMath.cpp  GridMath.h  HitCheck.cpp  HitCheck.h  Main.cpp  Observe.cpp  Observe.h  PostGameMenu.cpp  PostGameMenu.h  README.md  food.cpp  food.h  snake.cpp  snake.h  world.cpp  world.h
